css/style.css
/* ... */
.education .left {
  float: left;
  width: 550px;
}

.education .left p {
  padding: 0 0 30px 0;
}

.education .holder {
  overflow: hidden;
  border-bottom: 1px solid #ccc;
  padding: 0 0 24px 0;
  margin: 0 0 95px 0;
}

.education .holder.last {
  border-bottom: none;
  padding: 0 0 24px 0;
  margin: 0;
}

.education .right {
  float: right;
  width: 560px;
  padding: 6px 0 0 0;
}

.education .right article {
  padding: 0 0 68px 0;
}

.education .info-line {
  margin: -8px 0 10px 0;
}

.education .info-line span {
  margin: 0 4px 0 0;
  font-weight: 500;
}

.education .gpa {
  color: #fff;
  font-family: "Roboto";
  font-size: 14px;
  font-weight: bold;
  line-height: 29px;
  padding: 0 11px;
  background: #2ecc71;
  display: inline-block;
  margin: 0 0 30px 0;
}

.education .divider {
  background: #cccccc;
  display: block;
  height: 1px;
  margin: 0 0 21px 0;
}

.blockquote {
  background: #f2f2f1;
  padding: 92px 0 78px 0;
  margin: 0 0 95px 0;
  text-align: center;
}

.blockquote p {
  font-style: italic;
  font-size: 22px;
  font-weight: thin;
  line-height: 36px;
  padding: 0 40px 29px 40px;
}

.blockquote h4 {
  color: #556365;
  font-size: 18px;
  font-weight: bold;
  line-height: 36px;
  padding: 0 0 29px 0;
  text-transform: uppercase;
}

.blockquote .bx-pager-item {
  display: inline-block;
  padding: 0 5px;
}

.blockquote .bx-pager a {
  text-indent: -999em;
  height: 6px;
  width: 6px;
  border: 2px solid #2ecc71;
  border-radius: 20px;
  display: block;
  margin: 10px 0 0 0;
}

.blockquote .bx-pager a:hover,
.blockquote .bx-pager a.active {
  background: #2ecc71;
}

.portfolio {
  text-align: center;
  padding-top: 95px;
  overflow: hidden;
  margin-top: -95px;
}

.portfolio p {
  padding: 0 60px 30px 60px;
}

.portfolio .nav-bar {
  width: 286px;
  padding: 0 40px;
  text-align: left;
  background: #252e30;
}

.portfolio .nav-bar a {
  color: #919191;
  font-size: 18px;
  line-height: 30px;
}

.portfolio .nav-bar a:hover:after,
.portfolio .nav-bar a:hover:before {
  display: none;
}

.portfolio .nav-bar .current a,
.portfolio .nav-bar a:hover {
  color: #fff;
  text-decoration: none;
}

.portfolio .nav-bar h4 {
  color: #fff;
  font-size: 18px;
  line-height: 24px;
  text-transform: uppercase;
  font-weight: bold;
  padding: 35px 0 28px 0;
}

.portfolio section {
  overflow: hidden;
  clear: both;
  margin: 63px -50px 60px 0;
}

.portfolio article {
  float: left;
  margin: 0 41px 40px 0;
}

.portfolio article a {
  position: relative;
  display: block;
}

.portfolio a:before {
  background: #2ecc71;
  position: absolute;
  content: "";
  left: 0;
  right: 0;
  bottom: 0;
  -webkit-transition: all .2s ease;
  -moz-transition: all .2s ease;
  transition: all .2s ease;
  top: 0;
  opacity: 0;
  filter: alpha(opacity=0);
}

.portfolio a:after {
  background: url(../images/ico_search.png) no-repeat 49% 51%;
  position: absolute;
  content: "";
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  opacity: 0;
  -webkit-transition: all .2s ease;
  -moz-transition: all .2s ease;
  transition: all .2s ease;
}

.portfolio li a:before,
.portfolio li a:after {
  display: none;
}

.portfolio a:hover:before {
  opacity: 0.75;
  filter: alpha(opacity=75);
}

.portfolio a:hover:after {
  opacity: 1;
  filter: alpha(opacity=100);
}

.contacts {
  background: #252e30;
  padding: 96px 0 100px 0;
  overflow: hidden;
}

.contacts h2 {
  color: #fff;
}

.contacts .left {
  float: left;
  width: 550px;
}

.contacts .left p {
  padding: 0 0 30px 0;
}

.contacts .left p span {
  color: #fff;
  width: 95px;
  display: inline-block;
}

.contacts .left p a {
  color: #919191;
  width: 95px;
  display: inline-block;
}

.contacts .msg{
  display: none;
  font-size: 18px;
  color: #2ecc71;
  border: 2px solid #37e982;
  padding: 15px 20px;
  margin: 39px 0 0 0;
}

.contacts label {
  color: #fff;
  display: block;
  padding: 0 0 12px 0;
}

.contacts label.error {
  color: #cc0000;
}

.contacts input {
  width: 100%;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  height: 56px;
  margin: 0 0 31px 0;
  color: #dbdcdd;
}

.contacts textarea:focus,
.contacts input:focus {
  background: #fff;
  color: #919191;
}

.contacts input[type=submit] {
  padding: 0 37px;
  background: #191f21;
  width: auto;
  text-transform: uppercase;
}

.contacts input[type=submit]:hover {
  color: #fff;
  background: #2ecc71;
}

.contacts textarea {
  width: 100%;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  height: 279px;
  color: #dbdcdd;
  margin: 0 0 32px 0;
}

.contacts label span {
  color: #919191;
}

.contacts .right {
  float: right;
  width: 540px;
  margin: -31px 0 0 0;
}



/* Footer
------------------------------------------------------------------------------*/

#footer {
  background: #191f21;
  text-align: center;
  color: #4b5355;
  font-size: 14px;
  font-weight: 600;
  padding: 40px 0 41px 0;
  text-transform: uppercase;
}

#footer p {
  padding: 0 0 22px 0;
}

#footer li {
  display: inline-block;
  padding: 0 3px 0 4px;
}

#footer a {
  height: 34px;
  width: 34px;
  display: block;
  border-radius: 50px;
  background: #4b5456 url(../images/ico_social.png) no-repeat 0 7px;
}

#footer .twitter a {
  background-position: 0 7px;
}

#footer .facebook a {
  background-position: -34px 7px;
}

#footer .pinterest a {
  background-position: -68px 7px;
}

#footer .google-plus a {
  background-position: -102px 7px;
}

#footer .ball a {
  background-position: -136px 7px;
}

#footer .linked-in a {
  background-position: -170px 7px;
}

#footer .twitter a:hover {
  background-position: 0 -21px;
}

#footer .facebook a:hover {
  background-position: -34px -21px;
}

#footer .pinterest a:hover {
  background-position: -68px -21px;
}

#footer .google-plus a:hover {
  background-position: -102px -21px;
}

#footer .ball a:hover {
  background-position: -136px -21px;
}

#footer .linked-in a:hover {
  background-position: -170px -21px;
}
/* ... */

